--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,5 +1,5 @@
-\title{Title?}
-\author{Cameron Smith}
+\title{The Leslie model applied to \emph{Cryptococcus neoformans} populations in a selective environment}
+\author{Ximo Pechuan}
 
 %\institute{Albert Einstein College of Medicine, Department of Systems Biology}
 \setbeamerfont{institute}{size=\tiny}
