--- a/main.tex
+++ b/main.tex
@@ -15,16 +15,7 @@
 		\titlepage
 	\end{frame}
 	
-	\section{Algebra}
-	\input{tex/Algebra}
-	
-	\section{Coalgebra}
-	\input{tex/Coalgebra}
-	
-	\section{Algebra-Coalgebra duality}
-	\input{tex/AlgCoDual}
-	
-	\section{Symbolic dynamical systems}
-	\input{tex/SymbDynSys}
+	\section{Introduction}
+	\input{tex/intro}
 
 \end{document}
