added slides on adjunction and updated format

--- a/main.tex
+++ b/main.tex
@@ -10,12 +10,17 @@
 
 \begin{document}
 
-
 	\begin{frame}
 		\titlepage
 	\end{frame}
 	
 	\section{Introduction}
 	\input{tex/intro}
-
+	
+	\section{Hom-Tensor Adjunction}	
+	\input{tex/homtens}	
+	
+	\section{References}
+	\input{tex/bib}
+	
 \end{document}
