--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,4 +1,4 @@
-\title{The Leslie model applied to \emph{Cryptococcus neoformans} populations in a selective environment}
+\title{Functional closure}
 \author{Ximo Pechuan}
 
 %\institute{Albert Einstein College of Medicine, Department of Systems Biology}
