--- a/tex/header.tex
+++ b/tex/header.tex
@@ -65,3 +65,8 @@
     \mbox{\zsavepos{restofframe-\arabic{restofframe}-end}}%
     \par
 }
+
+%%
+\setbeamertemplate{blocks}[rounded][shadow=true] 
+\setbeamercolor{block title}{fg=black,bg=gray!40}
+\setbeamercolor{block body}{fg=black,bg=gray!10}
