replace framewidth by textwidth

--- a/tex/homtens.tex
+++ b/tex/homtens.tex
@@ -113,7 +113,7 @@ F & \colon \mathcal{C} \rightleftarrows \mathcal{D} \colon G\\
 \end{align*}
 where for any $c \in \Ob (\mathcal{C})$, $d \in \Ob (\mathcal{D})$, and $f \colon c \rightarrow Gd \in \Mor(\mathcal{C})$ there exists a unique $g \colon Fc \rightarrow d \in \Mor(\mathcal{D})$ such that $f = Gg \circ \eta_c$				
 \begin{columns}[t]
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
      \begin{block}{unit conditions for $F \dashv G$}
 		\abovedisplayskip=0pt
 		$$
@@ -123,7 +123,7 @@ where for any $c \in \Ob (\mathcal{C})$, $d \in \Ob (\mathcal{D})$, and $f \colo
 		$$
 		\end{block}
     \end{column}
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
 		     \begin{block}{adjoint correspondence}
 		\abovedisplayskip=0pt
 		$$
@@ -144,7 +144,7 @@ $$
 $$
 where for any $c \in \Ob (\mathcal{C})$, $d \in \Ob (\mathcal{D})$, and $g \colon Fc \rightarrow d \in \Mor(\mathcal{D})$ there exists a unique $f \colon c \rightarrow Gd \in \Mor(\mathcal{C})$ such that $g = \epsilon_D \circ Ff$	
 \begin{columns}[t]
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
 \begin{block}{counit conditions for $F \dashv G$}
 $$
 			\xymatrix{
@@ -153,7 +153,7 @@ $$
 $$
 \end{block}
     \end{column}
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
 		     \begin{block}{adjoint correspondence}
 		\abovedisplayskip=0pt
 		$$
