--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -92,7 +92,7 @@ As a first approximation, we can think of both objects as sets. Where $A$ repres
 %	$$
 %\begin{block}
 	\begin{center}
-		\includegraphics[width=0.4\framewidth]{fig/mrcatclose.pdf}
+		\includegraphics[width=0.4\textwidth]{fig/mrcatclose.pdf}
 	\end{center}
 %\end{block}
 \end{frame}
@@ -101,7 +101,7 @@ As a first approximation, we can think of both objects as sets. Where $A$ repres
 \begin{frame}
 \frametitle{infinite regress}
 	\begin{center}
-		\includegraphics[width=0.4\framewidth]{fig/mrcatinf.pdf}
+		\includegraphics[width=0.4\textwidth]{fig/mrcatinf.pdf}
 	\end{center}
 \end{frame}
 
@@ -116,7 +116,7 @@ Let $A,B,C,D \in Ob(\mathcal{L})$ and $f,g \in Mor(\mathcal{L})$ where $f  \in H
 
 \begin{frame}
 \frametitle{hom-tensor adjunction}
-In order for  $\mathcal{L}$  to be closed to efficient causation every morphism must be in turn an object of the category. If this is true, the existence of these exponential objects is associated with a special evaluation mapping:
+In order for  $\mathcal{L}$  to be closed to efficient causation every morphism must be in turn an object of the category. The existence of so-called {\it exponential objects} is associated with a special evaluation mapping:
 \begin{block}{metabolism evaluation map}
 \abovedisplayskip=0pt
 \begin{align*}
@@ -150,7 +150,7 @@ f & \longmapsto R(f)
 \end{align*}
 \end{block}
  \begin{columns}
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
       \begin{block}{metabolism evaluation map}
 		\abovedisplayskip=0pt
 		\begin{align*}
@@ -159,7 +159,7 @@ f & \longmapsto R(f)
 		\end{align*}
 		\end{block}
     \end{column}
-    \begin{column}{0.5\framewidth}
+    \begin{column}{0.5\textwidth}
 		\begin{block}{repair evaluation map}
 			\abovedisplayskip=0pt
 			\begin{align*}
@@ -175,7 +175,7 @@ f & \longmapsto R(f)
 A set of \textbf{boundary conditions} must be satisfied in order to achieve closure.
 
 \begin{columns}[t]
-   \begin{column}{0.5\framewidth}
+   \begin{column}{0.5\textwidth}
 		\begin{block}{boundary conditions}
 		\abovedisplayskip=0pt
 			\begin{align*}
@@ -185,7 +185,7 @@ A set of \textbf{boundary conditions} must be satisfied in order to achieve clos
 			\end{align*}
 		\end{block}
 	\end{column}
-	\begin{column}{0.5\framewidth}
+	\begin{column}{0.5\textwidth}
 		\begin{block}{MR diagram}
 		\abovedisplayskip=0pt
 		$$	\xymatrix@1{
