pre-pull: minor changes

--- a/tex/homtens.tex
+++ b/tex/homtens.tex
@@ -166,8 +166,8 @@ $$
 
 \subsection{Hom-tensor adjunction}
 \begin{frame}
-\frametitle{$\Delta \dashv \Pi$ adjunction}
-$$\Delta : \mathcal{C} \rightleftarrows \mathcal{C} \times \mathcal{C}: \Pi$$
+\frametitle{$\times \dashv Hom$ adjunction}
+$$ -- \times A: \mathcal{C} \rightleftarrows \mathcal{C}: (-)^A$$
 $$\Mor_{\mathcal{C}}(C, \Pi (X,Y)) \cong  \Mor_{\mathcal{C} \times \mathcal{C}}(\Delta C, (X,Y))$$
 			$$
 			\xymatrix{
