abstract characterization of tens -| hom adj

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 	
 	\section{Hom-Tensor Adjunction}	
 	\input{tex/homtens}	
+
+	\section{Functional closure}	
+	\input{tex/funclose}	
 	
 	\section{References}
 	\input{tex/bib}
