--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,5 +1,6 @@
 \title{Functional closure}
-\author{Ximo Pechuan}
+\subtitle{metabolism and its maintenance}
+\author{Ximo Pechuan$^1$, Cameron Smith$^1$}
 
 %\institute{Albert Einstein College of Medicine, Department of Systems Biology}
 \setbeamerfont{institute}{size=\tiny}
