explained transpose of eval map

--- a/tex/header.tex
+++ b/tex/header.tex
@@ -42,6 +42,7 @@
 \usepackage{xypic}
 \xyoption{2cell}
 \UseAllTwocells
+\usepackage{bussproofs}
 
 % see http://tex.stackexchange.com/questions/27315/scale-tikzpicture-to-the-remaining-height-of-a-beamer-frame
 \newcounter{restofframe}
