--- a/tex/funclose.tex
+++ b/tex/funclose.tex
@@ -233,11 +233,11 @@
 $$
 			\xymatrix{
 			 LOL &LoL &Sublol \\
-			  B^{A^{B^A}} \times A \ar[r]^{\epsilon} \ar[u]^{..^A} & B^{A^B} \ar[u]^{..} & B^{A^{B^B}} \times B\ar[l]^{\epsilon}\ar[u]^{..^B} \\
-			 B^{A^A} \times A \ar[r]^{\epsilon} \ar[u]^{r^A} & B^A \ar[u]^{r} & B^{A^B} \times B\ar[l]^{\epsilon}\ar[u]^{r^B} \\
-			B^A \times A \ar[r]^{\epsilon} \ar[u]^{g^A} & B \ar[u]^{g} & B^B \times B\ar[l]^{\epsilon}\ar[u]^{g^B} \\
-			A^A \times A \ar[r]^{\epsilon} \ar[u]^{f^A} & 
-			A\ar[u]^{f} & A^B\times B\ar[l]^{\epsilon}\ar[u]^{f^B} }
+			  B^{A^{B^A}} \times A \ar[r]_-{\epsilon} \ar[u]^-{..^A} & B^{A^B} \ar[u]^-{..} & B^{A^{B^B}} \times B\ar[l]^-{\epsilon}\ar[u]^-{..^B} \\
+			 B^{A^A} \times A \ar[r]_-{\epsilon} \ar[u]^-{r^A} & B^A \ar[u]^-{r} & B^{A^B} \times B\ar[l]^-{\epsilon}\ar[u]^-{r^B} \\
+			B^A \times A \ar[r]_-{\epsilon} \ar[u]^-{g^A} & B \ar[u]^-{g} & B^B \times B\ar[l]^-{\epsilon}\ar[u]^-{g^B} \\
+			A^A \times A \ar[r]_-{\epsilon} \ar[u]^-{f^A} & 
+			A\ar[u]^-{f} & A^B\times B\ar[l]^-{\epsilon}\ar[u]^-{f^B} }
 			$$
 
 \end{frame}
