--- a/skeleton.tex
+++ b/skeleton.tex
@@ -44,13 +44,21 @@ Hierarchy is a fundamental organizing concept in biology. The existence of a num
 
 \tableofcontents
 
-\section{Reasoning about emergent properties of biological systems}
+\section{Introduction}
 
-The development of a formal language for modeling and reasoning about biological systems was suggested by Joseph Woodger in collaboration with the developmental biologist Conrad Waddington and the logician Alfred Tarski as early as 1937 \cite{Woodger1937,Woodger1951,Woodger1952,Woodger1952a}. At that time it was perhaps difficult to understand how such a language could be put to use. Today we have tools that could enable the use of such a language: namely 1) computational machines to automate the details of routine transformations within the language and 2) accessible, growing repositories of biological data. Though we have access to necessary infrastructure, we lack such a language suggested by Woodger and others throughout the course of the 20th century as we have continued to rely on natural language heuristics to communicate and reason about biological systems.
+The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalog of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcends levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. In accordance with this thesis, the aim of this review is to consider a limited subset of past and present attempts to develop a formal language for biological systems focusing on the virtues and flaws of each approach in order to provide a reference for the current biologist interested in attempting to address the problem of understanding as it applies to biology.
 
-\section{Conclusion}
+Category theory has provided  a solid language in which to talk about mathematical systems and has been recently  used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
 
-The goal of organizing knowledge about biological systems will ultimately require the development of languages that can be tailored specifically for that task. The purpose of developing such a language is to provide a precise framework for a qualitative phenomenology of biological systems such that, any piece of data that can be collected, can be integrated and used to deduce apparent consequences that in some sense attempt to optimize the production of new or classification of old hypotheses that may be distinguished on that basis. Despite the fact that abstract concepts from pure mathematics have had little explicit coupling to the study of biological systems so far, we find that certain concepts can be adapted to serve as a basis for the development of such a domain-specific language for reasoning about biological systems. In order to realize such a goal, this language will need to be implemented in computational form rather than simply stated in abstract notation; however, clarification of the relationship between purely abstract concepts and concepts abstracted from the study of biological systems can help to make the costly choice of a framework to be implemented for the purposes of knowledge representation.
+\section{The definition of living systems}
+
+Rosen's metabolism and repair systems can be explained from a categorical perspective. In Life, Life itself, Rosen developed the concept of closure to efficient causation recovering partially the Aristotelian view of a causal explanation and by this giving some sense of structural definition of life. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristical clousure versus a material closure allows us to perfectly solve the parasite common issue.
+
+\section{A scent of category theory}
+It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult
+
+
+
 
 %------bibliography---%
 \bibliographystyle{unsrt} 
