--- a/skeleton.tex
+++ b/skeleton.tex
@@ -55,9 +55,16 @@ Category theory has provided  a solid language in which to talk about mathematic
 Rosen's metabolism and repair systems can be explained from a categorical perspective. In Life, Life itself, Rosen developed the concept of closure to efficient causation recovering partially the Aristotelian view of a causal explanation and by this giving some sense of structural definition of life. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristical clousure versus a material closure allows us to perfectly solve the parasite common issue.
 
 \section{A scent of category theory}
+
 It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult
 
+\section{Functional closure}
 
+word
+
+\section{Evolutionary perspectives}
+
+\section{Conclusions}
 
 
 %------bibliography---%
