--- a/skeleton.tex
+++ b/skeleton.tex
@@ -3,6 +3,7 @@
 %-----------------------------------------------%
 \documentclass[aps,twocolumn]{revtex4-1}
 \usepackage{graphicx}
+\usepackage{bussproofs}
 \usepackage{ifpdf}
 \ifpdf
 	\usepackage[backref]{hyperref}
@@ -46,13 +47,13 @@ Hierarchy is a fundamental organizing concept in biology. The existence of a num
 
 \section{Introduction}
 
-The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalog of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcends levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. In accordance with this thesis, the aim of this review is to consider a limited subset of past and present attempts to develop a formal language for biological systems focusing on the virtues and flaws of each approach in order to provide a reference for the current biologist interested in attempting to address the problem of understanding as it applies to biology.
+The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcends levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. In accordance with this thesis, the aim of this ....
 
 Category theory has provided  a solid language in which to talk about mathematical systems and has been recently  used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
 
 \section{The definition of living systems}
 
-Rosen's metabolism and repair systems can be explained from a categorical perspective. In Life, Life itself, Rosen developed the concept of closure to efficient causation recovering partially the Aristotelian view of a causal explanation and by this giving some sense of structural definition of life. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristical clousure versus a material closure allows us to perfectly solve the parasite common issue.
+Although the Aristotelian paradigm was abandoned with the advent of modern science, the recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solve the parasite common issue.
 
 \section{A scent of category theory}
 
@@ -60,8 +61,215 @@ It is not the objective of this work to give a detailed and more formal expositi
 
 \section{Functional closure}
 
-word
+In this section we will make a clear exposition of the categorical modelling relationship of a functionally closed living system. We will review succinctly Rosen's M,R-systems and hopefully go beyond concreting a categorical model of a living system inspired in our biosphere.
 
+The first thing we will use in order to build a categorical representation of a living system is its property as a transforming or metabolic entity. Departing from this consideration, a metabolic mapping in a living system $\mathcal{L}$ can be thought as a morphism between two objects of the \textbf{category} $\mathcal{L}$ such that:
+
+\begin{center}
+	$\xymatrix@1{
+	A\ar[r]^-{f} & B
+	}$
+
+\end{center}
+
+As a first approximation, we can think of both objects as sets, where $A$ represents the input metabolites and $B$  products of metabolic transformations. This is a first order abstraction of a living system that could be further developed in the light of considering those sets as graphs. We can define all \textbf{metabolisms} together as the set of all the different morphisms between these objects referred to as $Hom(A,B)$ or $B^A$.
+
+The finite nature of living systems imposes several constrains regarding the reposition or repair of the components that constitute it. So, as metabolic enzymes decay they must be repaired, from the metabolic products, or the system comprised of them will disintegrate. Besides, environmental fluctuations in $A$ have to be corrected by the differential availability and performance of the metabolic function. Hence, there must be a collection of morphisms from $B$ to $Hom(A,B)$ which can be identified with a \textbf{repair} system. So we have:
+
+
+\begin{center}
+	$
+	\xymatrix@1{
+	A\ar[r]^f &B\ar[r]^-g & B^A}
+	$
+\end{center}
+
+
+ The repair system itself or $g \in B^{A^B}$ also has a finite lifetime and needs to be {\it repaired} by some other system. 
+This argument appears to fall into infinite regress (\textbf{Figure 1}), but a detailed analysis shows that a \textbf{replication} function that closes the system to efficient causation is implicit.
+
+Now let us consider that the category $\mathcal{L}$ is concrete and has products. In order for  $\mathcal{L}$  to be  functionally closed every morphism must be in turn or represented by an object of the category. The existence of so-called {\it exponential objects} is associated with a special evaluation mappings:
+
+\begin{align*}
+e_f : B^A \times A &\longrightarrow B\\
+(f,a) & \longmapsto f(a)
+\end{align*}
+		
+\begin{align*}
+			e_g: B^{A^B} \times B &\longrightarrow B^A\\
+	    			            (g,b) & \longmapsto    g(b)
+			\end{align*}		
+
+We can functionally close the system via the \textbf{replication} map:
+\begin{align*}
+R: B^A & \longrightarrow B^{A^B}\\
+f & \longmapsto R(f)
+\end{align*}	
+		
+A set of \textbf{boundary conditions} must be satisfied in order to achieve closure.
+			\begin{align*}
+			f(a) &= b : B\\
+			g(b) &= f : B^A\\
+			R(f) &= g : B^{A^B}
+			\end{align*}
+\begin{center}
+
+		$$	\xymatrix@1{
+			A \ar[r]^{B^A}="ba" & B \ar@(r,ur)_(.5) {B^{A^B}} [];"ba"}$$
+\end{center}
+			
+					
+\begin{figure}
+\noindent\includegraphics[width=0.45\columnwidth]{fig/mrcatinf.pdf}
+\caption{Diagram showing the infinite stack of morphisms that apparently, would be needed to close the category}
+\label{fig:hom}
+\end{figure}
+
+
+\begin{align*}
+- \times A: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^A\\
+\Mor_{\mathcal{C}}(B \times A, B) & \cong  \Mor_{\mathcal{C}}(B, B^A)
+\end{align*}
+
+			$$
+			\xymatrix{
+			& B \times A \ar[d]^{g \times 1_A} \ar[dl]_{\bar{g}} & B \ar@{.>}[d]^{g}\\
+			B & B^A \times A \ar[l]^{\epsilon_B} & B^A}
+			$$
+	
+		$$
+			\frac{B \times A \longrightarrow B}{B \longrightarrow B^A}
+		$$
+		the counit is the evaluation map
+		$$
+			\epsilon_B = ev_B \colon B^A \times A \longrightarrow B
+		$$
+	
+\begin{align*}
+- \times A: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^A\\
+\Mor_{\mathcal{C}}(B^A \times A, B) & \cong  \Mor_{\mathcal{C}}(B^A, B^A)
+\end{align*}
+
+		$$
+			\frac{ \Pi_A B^A \longrightarrow B}{B^A \longrightarrow E_A B}
+		$$
+
+			$$
+			\xymatrix{
+			& \Pi_A B^A \ar[d]^{\Pi_A \bar{\epsilon}} \ar[dl]_{\epsilon} & B^A \ar@{.>}[d]^{\bar{\epsilon}}\\
+			B & \Pi_A E_A B \ar[l]^-{\epsilon} & E_A B}
+			$$
+	
+		$$
+			\frac{B^A \times A \longrightarrow B}{B^A \longrightarrow B^A}
+		$$
+		
+			$$
+			\xymatrix{
+			& B^A \times A \ar[d]^{1_{B^A} \times 1_A} \ar[dl]_{\overline{1_{B^A}}} & B^A \ar@{.>}[d]^{1_{B^A}}\\
+			B & B^A \times A \ar[l]^-{\overline{1_{B^A}}} & B^A}
+			$$
+
+\begin{align*}
+- \times B: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^B\\
+\Mor_{\mathcal{C}}(B^A \times B, B^A) & \cong  \Mor_{\mathcal{C}}(B^A, B^{A^B})
+\end{align*}
+
+			$$ \xymatrix{
+			& B^A \times B \ar[d]^-{h \times 1_B} \ar[dl]_{\bar{h}} & B^A \ar@{.>}[d]^-{h}\\
+			B^A & B^{A^B} \times B \ar[l]^{\epsilon_{B^A}} & B^{A^B}}
+			$$
+		
+		$$
+			\frac{B^A \times B \longrightarrow B^A}{B^A \longrightarrow B^{A^B}}
+		$$
+		the counit is the evaluation map
+		$$
+			\epsilon_{B^A} = ev_{B^A} \colon B^{A^B} \times B \longrightarrow B^A
+		$$
+
+\begin{align*}
+- \times B: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^B\\
+\Mor_{\mathcal{C}}(B^{A^B} \times B, B^A) & \cong  \Mor_{\mathcal{C}}(B^{A^B}, B^{A^B})
+\end{align*}
+
+		$$
+			\frac{ \Pi_B B^{A^B} \longrightarrow B^A}{B^{A^B} \longrightarrow E_B B^A}
+		$$
+
+			$$
+			\xymatrix{
+			& \Pi_B B^{A^B} \ar[d]^{\Pi_B \bar{\epsilon}} \ar[dl]_{\epsilon} & B^{A^B} \ar@{.>}[d]^{\bar{\epsilon}}\\
+			B^A & \Pi_B E_B B^A \ar[l]^-{\epsilon} & E_B B^A}
+			$$
+
+		$$
+			\frac{B^{A^B} \times B \longrightarrow B^A}{B^{A^B} \longrightarrow B^{A^B}}
+		$$
+
+			$$
+			\xymatrix{
+			& B^{A^B} \times B \ar[d]^{1_{B^{A^B}} \times 1_B} \ar[dl]_{\overline{1_{B^{A^B}}}} & B^{A^B} \ar@{.>}[d]^{1_{B^{A^B}}}\\
+			B^A & B^{A^B} \times B \ar[l]^-{\overline{1_{B^{A^B}}}} & B^{A^B}}
+			$$
+			
+						\begin{prooftree}
+				\AxiomC{$B^{A^B} \times B \longrightarrow B^A$}
+				\UnaryInfC{$B^{A^B} \longrightarrow B^{A^B}$}
+				\UnaryInfC{$1 \longrightarrow B^{A^B} \longrightarrow B^{A^B}$}
+				\UnaryInfC{$1 \times B \longrightarrow B^A \longrightarrow B^{A^B}$}
+				\UnaryInfC{$B \longrightarrow B^A \longrightarrow B^{A^B}$}
+				\UnaryInfC{$B \longrightarrow B^{A^B}$}
+				\end{prooftree}
+				
+	\begin{prooftree}
+				\AxiomC{$B^A \times A \longrightarrow B$}
+				\UnaryInfC{$B^A \longrightarrow B^A$}
+				\UnaryInfC{$1 \longrightarrow B^A \longrightarrow B^A$}							\UnaryInfC{$1 \times A \longrightarrow B \longrightarrow B^A$}
+				\UnaryInfC{$A \longrightarrow B \longrightarrow B^A$}
+				\UnaryInfC{$A \longrightarrow B^A$}
+				\end{prooftree}
+
+		
+	\begin{center}
+		\includegraphics[width=0.4\textwidth]{fig/mrcatinf.pdf}
+	\end{center}
+
+\begin{align*}
+- \times B: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^B\\
+\Mor_{\mathcal{C}}(B^{A^B} \times B, B^{A^B}) & \cong  \Mor_{\mathcal{C}}(B^{A^B}, B^{A^{B^B}})
+\end{align*}
+
+			$$
+			\xymatrix{
+			& B^{A^B} \times B \ar[d]^-{i \times 1_B} \ar[dl]_{\bar{i}} & B^{A^B} \ar@{.>}[d]^-{i}\\
+			B^{A^B} & B^{A^{B^B}} \times B \ar[l]^{\epsilon} & B^{A^{B^B}}
+			}
+			$$
+	
+		$$
+			\frac{B^{A^B} \times B \longrightarrow B^{A^B}}{B^{A^B} \longrightarrow B^{A^{B^B}}}
+		$$
+		the counit is the evaluation map
+		$$
+			\epsilon = ev_{B^{A^B}} \colon B^{A^{B^B}} \times B \longrightarrow B^{A^B}
+		$$
+	
+
+
+
+$$
+			\xymatrix{
+			 LOL &LoL &Sublol \\
+			  B^{A^{B^A}} \times A \ar[r]_-{\epsilon} \ar[u]^-{..^A} & B^{A^B} \ar[u]^-{..} & B^{A^{B^B}} \times B\ar[l]^-{\epsilon}\ar[u]^-{..^B} \\
+			 B^{A^A} \times A \ar[r]_-{\epsilon} \ar[u]^-{r^A} & B^A \ar[u]^-{r} & B^{A^B} \times B\ar[l]^-{\epsilon}\ar[u]^-{r^B} \\
+			B^A \times A \ar[r]_-{\epsilon} \ar[u]^-{g^A} & B \ar[u]^-{g} & B^B \times B\ar[l]^-{\epsilon}\ar[u]^-{g^B} \\
+			A^A \times A \ar[r]_-{\epsilon} \ar[u]^-{f^A} & 
+			A\ar[u]^-{f} & A^B\times B\ar[l]^-{\epsilon}\ar[u]^-{f^B} }
+			$$
+
+
+	
 \section{Evolutionary perspectives}
 
 \section{Conclusions}
