minor_text_changes

--- a/skeleton.tex
+++ b/skeleton.tex
@@ -53,8 +53,12 @@ Category theory has provided  a solid language in which to talk about mathematic
 
 \section{The definition of living systems}
 
-Although the Aristotelian paradigm was abandoned with the advent of modern science, the recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solve the parasite common issue.
+One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and parasitic organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is define, or more concretely, the boundary of our so called living system. A common argument against some definitions of life is the weakening of this boundary as the environment get more complex. One might argue that the autonomy of some systems is dependent on the environmental complexity and thus the definition of living system is highly context dependent. However, the definition of autonomy can be recovered if material and functional aspects are distinguished. Ironically, the Aristotelian paradigm was abandoned with the advent of modern science, but the recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solve the environmental complexity problem.
 
+$$ \xymatrix{
+			 Self-replicating & Self-evolving \ar[l]^-{Cell}\\
+			 Parasite-evolving \ar[u]^-{Prion*} & Parsite-replicating \ar[l]^-{Protein}\ar[u]^-{Virus} \\} $$
+			  
 \section{A scent of category theory}
 
 It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult
